<resources>
    <string name="app_name">SereneSpotsSQlite</string>
    <string name="user_name">Md Kabir Hassan</string>
    <string name="user_admission_no">UG02-053-20-001</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="items">Items</string>
    <string name="home">Home</string>
    <string name="admission_no">Place Address</string>
    <string name="full_name">Place Name</string>
    <string name="description">Description</string>
</resources>