<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/admissionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admission_no"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:maxLines="3"
                android:maxLength="25"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
